@@ -1,3 +1,15 @@
+2003/12/06 01:30 (-0500) rwmcfa1
+
+ 	* xs/GtkAccelGroup.xs: Gtk2-> functions moved under Gtk2::AccellGroups
+	which seems to make more sense.
+
+ 	* xs/GtkAccelMap.xs: intial import, 3/4 complete.
+ 
+ 	* t/accel-group-map.t: test out the new AccelMap stuff, in conjunction
+ 	with AccelGroup. 
+
+	* xs_files-2.0: added xs/GtkAccelMap.xs
+
 2003/12/05 13:42 (-0500) muppetman
 
 	D Changes: we haven't maintained this since May, we use ChangeLog.
